--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer class="footer bg-light">
-	<a rel="noreferrer" [attr.aria-label]="[footerData['dev']['name']]" href="{{footerData['dev']['link']}}" target=_blank class="footer-dev wow slideInRight" data-wow-delay=0.1s data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{footerData['dev']['name'].toUpperCase()}}</em> </strong>">
+	<ng-template #title><strong> <em>{{footerData['dev']['name'].toUpperCase()}}</em> </strong></ng-template>
+	<a rel="noreferrer" [attr.aria-label]="[footerData['dev']['name']]" href="{{footerData['dev']['link']}}" target=_blank class="footer-dev wow slideInRight" data-wow-delay=0.1s placement="bottom" [ngbTooltip]="title">
 		<img alt=footer width=52 height=120 src="{{footerData['dev']['image']}}" loading="lazy"/>
 	</a>
 	<div class=container>
@@ -9,7 +10,8 @@
 					<br>
 					<ul *ngFor="let socialList of footerData['social']" class="social-icons mb-3 list-inline">
 						<li *ngFor="let social of socialList" class="list-inline-item">
-							<a rel="noreferrer" aria-label="image" href="{{social['link']}}" target="_blank" data-toggle="tooltip" [attr.data-placement]="[social['placement']]" data-html=true title=" <strong> <em>{{social['name']}}</em> </strong>">
+							<ng-template #title><strong> <em>{{social['name']}}</em> </strong></ng-template>
+							<a rel="noreferrer" aria-label="image" href="{{social['link']}}" target="_blank" [placement]="[social['placement']]" [ngbTooltip]="title">
 								<img *ngIf="social['type'] === 'img'" src="{{social['image']}}" width=20 height=20 alt="social['name']" loading="lazy"/>
 								<i *ngIf="social['type'] === 'i'" class="{{social['class']}} dark"></i>
 							</a>
