--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,23 +13,24 @@
 		</div>
 		<div class="col-lg-12 mt-4 pt-2">
 			<div>
-				<ul class="nav nav-tabs nav-fill" id=myTab>
-					<li *ngFor="let tab of aboutData['NavTabs']" class=nav-item data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{tab['name'] }}</em> </strong>">
-						<a rel=noreferrer class="nav-link {{tab['active']}}" id="{{tab['id']}}-tab" data-toggle=tab href="#{{tab['id']}}"> {{tab["name"] }} </a>
+				<ul class="nav nav-tabs nav-fill" id="myTab">
+					<li *ngFor="let tab of aboutData['NavTabs']" class="nav-item">
+						<ng-template #title><strong> <em>{{ tab['name'] }}</em> </strong></ng-template>
+						<a rel="noreferrer" class="nav-link {{tab['active']}}" id="{{tab['id']}}-tab" data-toggle=tab href="#{{tab['id']}}" placement="bottom" [ngbTooltip]="title"> {{tab["name"] }} </a>
 					</li>
 				</ul>
-				<div class=tab-content id=myTabContent>
-					<div class="tab-pane fade show active" id=story role=tabpanel aria-labelledby=story-tab>
-						<div class=text-center>
+				<div class="tab-content" id="myTabContent">
+					<div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
+						<div class="text-center">
 							<div class="about-img mt-5 mb-5">
-								<img src="{{aboutData['image']}}" alt=Profile class="img-fluid mx-auto d-block rounded-circle" height=400 width=400 loading="lazy"/>
+								<img src="{{aboutData['image']}}" alt="Profile" class="img-fluid mx-auto d-block rounded-circle" height=400 width=400 loading="lazy"/>
 							</div>
-							<div class="h3 font-weight-bold mb-3 wow fadeIn">{{aboutData['name']}} <small class=text-muted> - {{aboutData['about']['tech-stats']}} </small></div>
+							<div class="h3 font-weight-bold mb-3 wow fadeIn">{{aboutData['name']}} <small class="text-muted"> - {{aboutData['about']['tech-stats']}} </small></div>
 							<p class="text-muted wow slideInUp"> {{aboutData["about"]["bio"]}}</p>
 							<p class="text-muted wow fadeInDownBig"> <strong>IDE & Editors Used</strong> : {{aboutData['about']['IDE and Editors'].join(', ')}}</p>
 						</div>
 					</div>
-					<div class="tab-pane fade" id=skill role=tabpanel aria-labelledby=skill-tab>
+					<div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby=skill-tab>
 						<div class="row">
 							<div class="col-lg-6" *ngFor="let skills of aboutData['skills']">
 								<div class="skill">
@@ -45,7 +46,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="tab-pane fade" id=resume role=tabpanel aria-labelledby=resume-tab>
+					<div class="tab-pane fade" id="resume" role="tabpanel" aria-labelledby=resume-tab>
 						<div class=row>
 							<div class=col-lg-12>
 								<div id=education class=education-section>
