--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -35,7 +35,8 @@
 						<div class=services-desc>
 							<div class="mb-1">{{training['description']}}</div>
 							<br>
-							<a rel="noreferrer" aria-label="image" href="{{training['link']}}" target=_blank class="btn btn-round p-2 certificate-button" data-toggle="tooltip" data-placement="bottom" data-html="true" title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a>
+							<ng-template #title><strong> <em>Certificate Link</em> </strong></ng-template>
+							<a rel="noreferrer" aria-label="image" href="{{training['link']}}" target=_blank class="btn btn-round p-2 certificate-button" placement="bottom" [ngbTooltip]="title"> Certificate Link </a>
 						</div>
 					</div>
 				</div>
