--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,8 +1,1 @@
-<div *ngIf="showSplash" class=splash [ngStyle]="{transition : splashTransition}">
-	<div class="splash-circle circle-1">
-		<div class=circle-animation></div>
-	</div>
-	<div class="splash-circle circle-2">
-		<div class=circle-animation></div>
-	</div>
-</div>
+<div *ngIf="showSplash" class=splash [ngStyle]="{transition : splashTransition}"><div class="splash-circle circle-1"><div class=circle-animation></div></div><div class="splash-circle circle-2"><div class=circle-animation></div></div></div>
