--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,26 +1,4 @@
-<section class=section id=about>
-	<div class=container>
-		<div class="row justify-content-center txt-bg txt-bg-about">
-			<div class="col-lg-6 pointer">
-				<div class="wow fadeIn section-title text-center mb-4 pb-2">
-					<div class="mb-5 pb-3">
-						<i class="fas fa-user-graduate h1 text-muted"></i>
-					</div>
-					<div class="h3 font-weight-bold">About me</div>
-					<p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-12 mt-4 pt-2">
-			<div>
-				<ul class="nav nav-tabs nav-fill" id="myTab">
-					<li *ngFor="let tab of aboutData['NavTabs']" class="nav-item">
-						<ng-template #title><strong> <em>{{ tab['name'] }}</em> </strong></ng-template>
-						<a rel="noreferrer" class="nav-link {{tab['active']}}" id="{{tab['id']}}-tab" data-toggle=tab href="#{{tab['id']}}" placement="{{tab['placement']}}" [ngbTooltip]="title"> {{tab["name"] }} </a>
-					</li>
-				</ul>
-				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
+<section class=section id=about><div class=container><div class="row justify-content-center txt-bg txt-bg-about"><div class="col-lg-6 pointer"><div class="wow fadeIn section-title text-center mb-4 pb-2"><div class="mb-5 pb-3"><i class="fas fa-user-graduate h1 text-muted"></i></div><div class="h3 font-weight-bold">About me</div><p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p></div></div></div><div class="col-lg-12 mt-4 pt-2"><div><ul class="nav nav-tabs nav-fill" id="myTab"><li *ngFor="let tab of aboutData['NavTabs']" class="nav-item"><ng-template #title><strong> <em>{{ tab['name'] }}</em> </strong></ng-template><a rel="noreferrer" class="nav-link {{tab['active']}}" id="{{tab['id']}}-tab" data-toggle=tab href="#{{tab['id']}}" placement="{{tab['placement']}}" [ngbTooltip]="title"> {{tab["name"] }} </a></li></ul><div class="tab-content" id="myTabContent"><div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
 						<div class="text-center">
 							<div class="about-img mt-5 mb-5">
 								<img src="{{aboutData['image']}}" alt="Profile" class="img-fluid mx-auto d-block rounded-circle" height=400 width=400 loading="lazy"/>
@@ -29,8 +7,7 @@
 							<p class="text-muted wow slideInUp"> {{aboutData["about"]["bio"]}}</p>
 							<p class="text-muted wow fadeInDownBig"> <strong>IDE & Editors Used</strong> : {{aboutData['about']['IDE and Editors'].join(', ')}}</p>
 						</div>
-					</div>
-					<div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby=skill-tab>
+					</div><div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby=skill-tab>
 						<div class="row">
 							<div class="col-lg-6" *ngFor="let skills of aboutData['skills']">
 								<div class="skill">
@@ -45,8 +22,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="tab-pane fade" id="resume" role="tabpanel" aria-labelledby=resume-tab>
+					</div><div class="tab-pane fade" id="resume" role="tabpanel" aria-labelledby=resume-tab>
 						<div class=row>
 							<div class=col-lg-12>
 								<div id=education class=education-section>
@@ -69,9 +45,4 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+					</div></div></div></div></div></section>
