--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,10 +1,1 @@
-<app-splash></app-splash>
-<app-navbar></app-navbar>
-<app-home></app-home>
-<app-about></app-about>
-<app-quote></app-quote>
-<app-portfolio></app-portfolio>
-<app-training></app-training>
-<app-achievement></app-achievement>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<app-splash></app-splash><app-navbar></app-navbar><app-home></app-home><app-about></app-about><app-quote></app-quote><app-portfolio></app-portfolio><app-training></app-training><app-achievement></app-achievement><app-contact></app-contact><app-footer></app-footer>
