--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,1 @@
-<section class="bg-home" id="home">
-	<div class="bg-overlay"></div>
-	<div id="particles-js"></div>
-	<div class="home-center">
-		<div class="home-desc-center">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-10 mt-5">
-						<div class="home-title text-center">
-							<h5 class="wow fadeInDownBig text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5>
-							<h1 class="display-3">
-								<span class="element text-white disable-select"></span>
-							</h1>
-							<p class="wow fadeInUpBig text-light mx-auto para-desc disable-select">
-								{{homeData['introduction']}}
-							</p>
-							<div class="mt-4 pt-2">
-								<ng-template #title ><strong> <em>Resume</em> </strong></ng-template>
-								<a rel="noreferrer" aria-label="home" target="_blank" href="{{homeData['resumeLink']}}" class="btn btn-outline btn-round" placement="bottom" [ngbTooltip]="title"> Download Resume <i class="fas fa-download ml-2"></i> </a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<section class="bg-home" id="home"><div class="bg-overlay"></div><div id="particles-js"></div><div class="home-center"><div class="home-desc-center"><div class="container"><div class="row justify-content-center"><div class="col-lg-10 mt-5"><div class="home-title text-center"><h5 class="wow fadeInDownBig text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5><h1 class="display-3"><span class="element text-white disable-select"></span></h1><p class="wow fadeInUpBig text-light mx-auto para-desc disable-select">{{homeData['introduction']}}</p><div class="mt-4 pt-2"><ng-template #title ><strong> <em>Resume</em> </strong></ng-template><a rel="noreferrer" aria-label="home" target="_blank" href="{{homeData['resumeLink']}}" class="btn btn-outline btn-round" placement="bottom" [ngbTooltip]="title"> Download Resume <i class="fas fa-download ml-2"></i> </a></div></div></div></div></div></div></div></section>
