--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div class="loader-section section-left" [ngStyle]="{'transform':this.visible?'translateX(-100%)':''}"></div><div class="loader-section section-right" [ngStyle]="{'transform':this.visible?'translateX(100%)':''}"></div><router-outlet *ngIf="this.visible"></router-outlet>
+<router-outlet></router-outlet>
