--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -1,1 +1,1 @@
-<app-navbar></app-navbar><app-home></app-home><app-waifu *ngIf="checkScreenSize"></app-waifu><app-about></app-about><app-quote></app-quote><app-portfolio></app-portfolio><app-training></app-training><app-achievement></app-achievement><app-contact></app-contact><app-footer></app-footer>
+<app-navbar></app-navbar><app-home></app-home><app-about></app-about><app-quote></app-quote><app-portfolio></app-portfolio><app-training></app-training><app-achievement></app-achievement><app-contact></app-contact><app-footer></app-footer>
